# mkv-tagify

./: .gitignore  CHANGELOG.md  Main.hs  README.md  flake.nix  hie.yaml  mkv-tagify.cabal  overlay.nix
.github/workflows/: main.yml
app/: Main.hs
cabal.materialized/: default.nix
hlint.materialized/: default.nix
mkv-tagify.materialized/: default.nix
mkv-tagify.materialized/.plan.nix/: mkv-tagify.nix
src/mkv/: Utils.hs
test/: Main.hs
