cabal-version:      >=1.10
name:               mkv-tagify
version:            0.1.0.1
license-file:       LICENSE
maintainer:         tgagnaux@gmail.com
author:             Thibault Gagnaux
build-type:         Simple
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Mkv.Utils
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base >=4.7.0.1 && <4.14,
        themoviedb >=1.2.0.1 && <1.3,
        hxt >=9.3.1.18 && <9.4,
        text >=1.1.0.0 && <1.3,
        time >=1.4.2 && <1.12,
        transformers >=0.5.6.2 && <0.6

executable mkv-tagify
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.7.0.1 && <4.14,
        themoviedb >=1.2.0.1 && <1.3,
        hxt >=9.3.1.18 && <9.4,
        text >=1.1.0.0 && <1.3,
        time >=1.4.2 && <1.12,
        transformers >=0.5.6.2 && <0.6,
        mkv-tagify -any

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:
        base >=4.7.0.1 && <4.14,
        tasty >=1.4.0.1 && <1.5,
        tasty-hunit >=0.10.0.3 && <0.11,
        themoviedb >=1.2.0.1 && <1.3,
        text >=1.1.0.0 && <1.3,
        time >=1.4.2 && <1.12,
        transformers >=0.5.6.2 && <0.6,
        mkv-tagify -any
